# qiskit-fermions

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml
.github/workflows/: coverage.yml  docs.yml  lint.yml  test_development_versions.yml
crates/: README.md
crates/cext/: Cargo.toml  build.rs  cbindgen.toml
crates/cext/src/: exit_codes.rs  lib.rs  pointers.rs
crates/cext/src/mappers/: mod.rs
crates/cext/src/operators/: fermion_operator.rs  majorana_operator.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/mappers/: mod.rs
crates/core/src/operators/: fermion_operator.rs  majorana_operator.rs  mod.rs
crates/pyext/: Cargo.toml
crates/pyext/src/: lib.rs
crates/pyext/src/mappers/: mod.rs
crates/pyext/src/operators/: fermion_operator.rs  majorana_operator.rs  mod.rs
crates/qiskit-sys/: Cargo.toml  README.md  build.rs
crates/qiskit-sys/src/: lib.rs
docs/: Doxyfile  README.md  conf.py  index.rst  install-c.rst  install-py.rst  install.rst
docs/_templates/autosummary/: base.rst  class.rst  function.rst
docs/cdoc/: index.h  index.rst  qf-commutators.rst  qf-electronic-integrals.rst  qf-exit-code.rst  qf-fcidump.rst  qf-ferm-op.rst  qf-maj-op.rst  qf-mappers-library.rst  qf-operators-library.rst  qf-operators.rst  qf-various.rst
docs/pydoc/: index.rst  qiskit_fermions.mappers.library.rst  qiskit_fermions.mappers.rst  qiskit_fermions.operators.library.rst  qiskit_fermions.operators.rst
docs/tutorials/: n2.fcidump  sqdrift.rst
python/qiskit_fermions/: __init__.py
python/qiskit_fermions/mappers/: __init__.py  fermion_generators.py  majorana_generators.py
python/qiskit_fermions/operators/: __init__.py  fermion_action.py  majorana_action.py
releasenotes/: config.yaml
tests/: README.md  heh.fcidump
tests/c/: CMakeLists.txt  common.c  common.h  test_commutators.c  test_electronic_integrals.c  test_fcidump.c  test_fermion_operator.c  test_jordan_wigner.c  test_majorana_fermion.c  test_majorana_operator.c
tests/python/: __init__.py
tests/python/mappers/: __init__.py  test_fermion_generators.py  test_majorana_generators.py
tests/python/operators/: __init__.py  test_fermion_operator.py  test_majorana_operator.py
tools/: install_ubuntu_docs_dependencies.sh  verify_headers.py
