[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"

# Shared dependencies that can be inherited.  This just helps a little with
# making sure our crates don't directly depend on different versions of things,
# although we can't help it if our transitive dependencies pull in more.
#
# Each crate can add on specific features freely as it inherits.
[workspace.dependencies]
ndarray = "0.17"
num-complex = "0.4"
num-traits = "0.2"
numpy = "0.27"
paste = "1.0"
# Most of the crates don't need the feature `extension-module`, since only `qiskit-pyext` builds an
# actual C extension (the feature disables linking in `libpython`, which is forbidden in Python
# distributions).  We only activate that feature when building the C extension module; we still need
# it disabled for Rust-only tests to avoid linker errors with it not being loaded.  See
# https://pyo3.rs/main/features#extension-module for more.
pyo3 = { version = "0.27", features = ["abi3-py310", "multiple-pymethods", "num-complex"] }
pyo3-stub-gen = "0.17"
rayon = "1.11"
regex = "1.12"
thiserror = "2.0"

# These are our own crates.
qiskit-fermions-core = { path = "crates/core" }
qiskit-fermions-pyext = { path = "crates/pyext" }
qiskit-fermions-cext = { path = "crates/cext" }
qiskit-sys = { path = "crates/qiskit-sys" }
