[build-system]
requires = [
    "setuptools>=77.0",
    "setuptools-rust",
]
build-backend = "setuptools.build_meta"

[project]
name = "qiskit-fermions"
version = "0.0.0"
readme = "README.md"
description = "Qiskit for Fermions"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.10"

dependencies = [
    "qiskit>=2.3",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "qiskit-fermions[docs,lint,test]",
    "tox>=4.4.3",
]
basetest = [
    "pytest>=8.0",
    "pytest-subtests>=0.14",
]
test = [
    "qiskit-fermions[basetest,doctest]",
]
doctest = [
    "qiskit-fermions[basetest]",
    "pytest-doctestplus>=1.2.1",
]
style = [
    "ruff==0.14.14",
    "typos>=1.20.0",
]
lint = [
    "qiskit-fermions[style]",
    "mypy==1.19.1",
    "reno>=4.1",
    "toml>=0.9.6",
]
docs = [
    "qiskit-fermions[doctest]",
    "qiskit-sphinx-theme~=2.0.0",
    "sphinx-design",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx_reredirects",
    "sphinxcontrib-katex",
    "nbsphinx>=0.9.4",
    "reno>=4.1",
    "breathe>=4.35.0",
    "matplotlib",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["qiskit_fermions", "qiskit_fermions.*"]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["./python/qiskit_fermions/", "./tests/python/"]

[tool.ruff]
line-length = 100
src = ["python/qiskit_fermions", "tests/python"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle
    "W",   # pycodestyle
    "D",   # pydocstyle
    "F",   # pyflakes
    "RUF", # ruff
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/python/**.py" = [
    "D",  # pydocstyle
]
"docs/**/*" = [
    "E402", # module level import not at top of file
    "D",    # pydocstyle
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = """
# This code is a Qiskit project.
#
# \\(C\\) Copyright IBM \\d{4}((,\\s)\\d{4})*\\.
#
# This code is licensed under the Apache License, Version 2\\.0\\. You may
# obtain a copy of this license in the LICENSE\\.txt file in the root directory
# of this source tree or at http\\:\\/\\/www\\.apache\\.org\\/licenses\\/LICENSE\\-2\\.0\\.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals\\.
"""

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.typos.default.extend-words]
arange = "arange"
ba = "ba"
thr = "thr"
