[package]
name = "qiskit-fermions-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_fermions_core"

[dependencies]
ndarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
qiskit-sys.workspace = true
rayon.workspace = true
regex.workspace = true
