[package]
name = "qiskit-fermions-pyext"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_fermions_pyext"
doctest = false
crate-type = ["cdylib", "rlib"]

[features]
# We always need to activate PyO3's `extension-module` for this crate to be useful at all, but we
# need it *not* to be active for the tests of other crates to work.  If the feature is active,
# `libpython` is *not* linked, and if the feature isn't present, then it is.  To test the Rust
# crates as standalone binaries, executables, we need `libpython` to be linked in, so we make the
# feature a default, and run `cargo test --no-default-features` to turn it off.
default = ["pyo3/extension-module"]

[dependencies]
ndarray.workspace = true
num-complex.workspace = true
numpy.workspace = true
pyo3.workspace = true
pyo3-stub-gen.workspace = true
qiskit-fermions-core.workspace = true
qiskit-sys = { workspace = true, features = ["python_binding"] }

[[bin]]
name = "stub_gen"
doc = false
